--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Sharing -->
     <!-- Facebook/X -->
     <meta property="og:title" content="SUI FISH BEAR">
-    <meta property="og:description" content="$FISHBEAR, the meme coin making a splash on the SUI blockchain!">
+    <meta property="og:description" content="$FBEAR, the meme coin making a splash on the SUI blockchain!">
     <meta property="og:image" content="img/site-share.jpg">
     <meta property="og:url" content="index.html">
     <meta name="twitter:card" content="summary_large_image">
@@ -17,7 +17,7 @@
     <meta name="twitter:site" content="@suifishbear">
     <meta name="twitter:desscription" content="Catfish SUI Crypto.">
     <meta name="twitter:image" content="img/site-share.jpg">
-    <meta name="twitter:image:alt" content="$FISHBEAR, the meme coin making a splash on the SUI blockchain!">
+    <meta name="twitter:image:alt" content="$FBEAR, the meme coin making a splash on the SUI blockchain!">
     <!-- Twitter -->
     <title>Sui Fish Bear</title>
     <link rel="stylesheet" href="css/style.css">
@@ -903,7 +903,7 @@
             <li class="buy"><a href="https://dexscreener.com/sui" class="button button-dark" target="_blank">Chart <i class="fa-solid fa-arrow-up-right-from-square" aria-label="(opens in new window)"></i></a></li>
           </ul>
           <div class="home-display">
-            <h1 id="home-title">$FISHBEAR</h1>
+            <h1 id="home-title">FISHBEAR</h1>
             <img class="home-img" src="img/catfish-avatar.png" alt="Blue FISHBEAR avatar wearing orange hat with SUI logo on the front." />
           </div>
           <ul class="share-links">
@@ -919,7 +919,7 @@
         <img src="img/medium-bubbles.png" alt="" class="bubbles bubbles-fast bubbles-right" />
         <div class="container">
           <h2 id="story-title">Story</h2>
-          <p>Get ready to dive into the zany, hilarious world of $FISHBEAR, the meme coin making a splash on the SUI blockchain! 🐟🐻 Inspired by that wild "Fish Bear" episode of *SpongeBob* (remember the goofy hybrid that scared Bikini Bottom?), $FISHBEAR brings that same mix of chaos and fun. This isn’t your average token, it’s here to entertain, make you laugh, and maybe even boost your portfolio. Whether you’re here for the memes or just want to ride the wave, $FISHBEAR is ready to take your portfolio on a crazy underwater adventure. 🌊</p>
+          <p>Get ready to dive into the zany, hilarious world of $FBEAR, the meme coin making a splash on the SUI blockchain! 🐟🐻 Inspired by that wild "Fish Bear" episode of *SpongeBob* (remember the goofy hybrid that scared Bikini Bottom?), $FBEAR brings that same mix of chaos and fun. This isn’t your average token, it’s here to entertain, make you laugh, and maybe even boost your portfolio. Whether you’re here for the memes or just want to ride the wave, $FBEAR is ready to take your portfolio on a crazy underwater adventure. 🌊</p>
           <div class="organic-card organic-card-dark contract-address">
             <h3>Contract Address</h3>
             <textarea class="input-masquerade" id="contract-address-code" rows="3">SOON</textarea>
@@ -1309,7 +1309,7 @@
               <li>
                 <div class="step-content">
                   <h3>Choose a Wallet</h3>
-                  <p>A SUI wallet is essential to use, trade, or hold $FISHBEAR. Here are some that you can use:</p>
+                  <p>A SUI wallet is essential to use, trade, or hold $FBEAR. Here are some that you can use:</p>
                   <ul class="animate-in-out">
                     <li><a href="https://chromewebstore.google.com/detail/suiet-sui-wallet/khpkpbbcccdmmclmpigdgddabeilkdpd" target="_blank"><img src="img/logo-wallet-suiet.svg" alt="Suiet Wallet"/></a></li>
                     <li><a href="https://chromewebstore.google.com/u/1/detail/ethos-sui-wallet/mcbigmjiafegjnnogedioegffbooigli?hl=en" target="_blank"><img src="img/logo-wallet-ethos.html" alt="Ethos Wallet"/></a></li>
@@ -1335,8 +1335,8 @@
               </li>
               <li>
                 <div class="step-content">
-                  <h3>Exchange for $FISHBEAR</h3>
-                  <p>You can trade your SUI for $FISHBEAR in the following places:</p>
+                  <h3>Exchange for $FBEAR</h3>
+                  <p>You can trade your SUI for $FBEAR in the following places:</p>
                   <ul class="animate-in-out">
                     <li><a href="https://app.turbos.finance/#/trade" target="_blank"><img src="img/logo-dex-turbos.html" alt="Turbos"/></a></li>
                     <li><a href="https://dex.bluemove.net/" target="_blank"><img src="img/logo-bluemove-swap.png" alt="BlueMove Swap"/></a></li>
@@ -1360,7 +1360,7 @@
         <div class="disclaimer">
           <h2>Disclaimer</h2>
           <ul>
-            <li>High Risk: Investing in $FISHBEAR is highly speculative and risky. Prices can go up or down significantly.</li>
+            <li>High Risk: Investing in $FBEAR is highly speculative and risky. Prices can go up or down significantly.</li>
             <li>Volatility: Expect wild price swings. It's not for the faint-hearted.</li>
             <li>No Guarantees: There's no promise of value or utility. It could end up worthless.</li>
             <li>Do Your Homework: Don't just go by what you see online. Research thoroughly.</li>
